new gradle, junit5, reports, and github actions (#1)