@@ -9,7 +9,6 @@ import project_euler.math.prime.PrimeRepository;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.LongStream;
 
 import static project_euler.util.Collections.append;
@@ -18,13 +17,13 @@ import static project_euler.util.Collections.sort;
 public class Divisors {
 
     public List<Long> get(long number) {
-        // FIXME this is still ugly
+        // FIXME this is still ugly | NOSONAR
         PrimeRepository repository1 = new PrimeRepository("data/prime_numbers.txt");
         PrimeRepository repository2 = new PrimeRepository("data/prime_numbers.txt");
         PrimeFactors factors = new PrimeFactors(new PrimeFactory(new PrimeCheck(repository1), repository2));
 
         List<Long> primeFactors = sort(flat(factors.primeFactors(number)));
-        List<Long> divisors = new Combination().get(primeFactors).stream().map(Divisors::multiple).collect(Collectors.toList());
+        List<Long> divisors = new Combination().get(primeFactors).stream().map(Divisors::multiple).toList();
 
         return sort(append(1L, divisors));
     }
